testing map label

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="loadMarkers.js"></script>
     <script type="text/javascript" src="markerwithlabel.js"></script>
     <script type="text/javascript" src="markermanager.js"></script>
+    <script type="text/javascript" src="maplabel.min.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     <!-- <script type="text/javascript">
             function initialize() {
