--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-nfwJ8oKrsSmNurbM7nbyjPZylPQAMw"></script>
-    <script type="text/javascript" src="loadMarkers.js"></script>
+    <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-nfwJ8oKrsSmNurbM7nbyjPZylPQAMw"></script>
+    <script type="text/javascript" src="loadOverlay.js"></script>
+    <!-- <script type="text/javascript" src="loadMarkers.js"></script>
     <script type="text/javascript" src="markerwithlabel.js"></script>
-    <script type="text/javascript" src="markermanager.js"></script>
+    <script type="text/javascript" src="markermanager.js"></script> -->
     <link rel="stylesheet" type="text/css" href="main.css">
     <!-- <script type="text/javascript">
             function initialize() {
@@ -31,11 +32,11 @@
 </head>
 
 <body>
-    <canvas id="myCanvas" width="100" height="100" hidden></canvas>
+    <!-- <canvas id="myCanvas" width="100" height="100" hidden></canvas> -->
     <!-- maps div -->
 
     <div id="map" style="border: 2px solid #3872ac;"></div>
-    <div id="status"></div>
+
 </body>
 
 </html>
