--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <!-- maps div -->
 
     <div id="map" style="border: 2px solid #3872ac;"></div>
-
+   <div>
+     <a href="#overlay.html"></a>
+   </div>
 </body>
 
 </html>
