--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         html,
         body,
         #map {
-            height: 100%;
+            height: 500px;
             margin: 0;
             padding: 0;
         }
