--- a/index.html
+++ b/index.html
@@ -1,48 +1,74 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <style type="text/css">
-        html,
-        body,
-        #map {
-            height: 500px;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-nfwJ8oKrsSmNurbM7nbyjPZylPQAMw"></script>
-    <script type="text/javascript" src="loadOverlay.js"></script>
-    <!-- <script type="text/javascript" src="loadMarkers.js"></script>
-    <script type="text/javascript" src="markerwithlabel.js"></script>
-    <script type="text/javascript" src="markermanager.js"></script> -->
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <!-- <script type="text/javascript">
-            function initialize() {
-                var mapOptions = {
-                    center: { lat: -34.397, lng: 150.644},
-                    zoom: 8
-                };
-                var map = new google.maps.Map(document.getElementById('map-canvas'),
-                                              mapOptions);
-            }
-            google.maps.event.addDomListener(window, 'load', initialize);
-        </script>-->
+<meta name="viewport"></meta>
+<title>HRV_adm1 - Google Fusion Tables</title>
+<style type="text/css">
+html, body, #googft-mapCanvas {
+  height: 300px;
+  margin: 0;
+  padding: 0;
+  width: 500px;
+}
+</style>
+
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&amp;v=3"></script>
+
+<script type="text/javascript">
+  function initialize() {
+    google.maps.visualRefresh = true;
+    var isMobile = (navigator.userAgent.toLowerCase().indexOf('android') > -1) ||
+      (navigator.userAgent.match(/(iPod|iPhone|iPad|BlackBerry|Windows Phone|iemobile)/));
+    if (isMobile) {
+      var viewport = document.querySelector("meta[name=viewport]");
+      viewport.setAttribute('content', 'initial-scale=1.0, user-scalable=no');
+    }
+    var mapDiv = document.getElementById('googft-mapCanvas');
+    mapDiv.style.width = isMobile ? '100%' : '500px';
+    mapDiv.style.height = isMobile ? '100%' : '300px';
+    var map = new google.maps.Map(mapDiv, {
+      center: new google.maps.LatLng(44.50515532474894, 16.46237950000011),
+      zoom: 7,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    });
+
+    layer = new google.maps.FusionTablesLayer({
+      map: map,
+      heatmap: { enabled: false },
+      query: {
+        select: "col2",
+        from: "1f_TNqF0120QAx8XfbrOOk5E_qTQUC0naI08z32nm",
+        where: ""
+      },
+      options: {
+        styleId: 2,
+        templateId: 2
+      }
+    });
+
+    if (isMobile) {
+      var legend = document.getElementById('googft-legend');
+      var legendOpenButton = document.getElementById('googft-legend-open');
+      var legendCloseButton = document.getElementById('googft-legend-close');
+      legend.style.display = 'none';
+      legendOpenButton.style.display = 'block';
+      legendCloseButton.style.display = 'block';
+      legendOpenButton.onclick = function() {
+        legend.style.display = 'block';
+        legendOpenButton.style.display = 'none';
+      }
+      legendCloseButton.onclick = function() {
+        legend.style.display = 'none';
+        legendOpenButton.style.display = 'block';
+      }
+    }
+  }
+
+  google.maps.event.addDomListener(window, 'load', initialize);
+</script>
 </head>
 
 <body>
-    <!-- <canvas id="myCanvas" width="100" height="100" hidden></canvas> -->
-    <!-- maps div -->
-
-    <div id="map" style="border: 2px solid #3872ac;"></div>
-   <div>
-     <a href="#overlay.html"></a>
-   </div>
+  <div id="googft-mapCanvas"></div>
 </body>
-
 </html>
-
-<!--<script src="https://maps.googleapis.com/maps/api/js?key=API_KEY"></script>-->
-
-<!--<script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=geometry,places&ext=.js"></script>-->
