--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         html,
         body,
         #map {
-            height: 500px;
+            height: 100%;
             margin: 0;
             padding: 0;
         }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-nfwJ8oKrsSmNurbM7nbyjPZylPQAMw"></script>
+    <script  type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-nfwJ8oKrsSmNurbM7nbyjPZylPQAMw"></script>
     <script type="text/javascript" src="loadOverlay.js"></script>
     <!-- <script type="text/javascript" src="loadMarkers.js"></script>
     <script type="text/javascript" src="markerwithlabel.js"></script>
@@ -36,9 +36,7 @@
     <!-- maps div -->
 
     <div id="map" style="border: 2px solid #3872ac;"></div>
-   <div>
-     <a href="#overlay.html"></a>
-   </div>
+
 </body>
 
 </html>
