--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script  type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-nfwJ8oKrsSmNurbM7nbyjPZylPQAMw"></script>
-    <script type="text/javascript" src="loadOverlay.js"></script>
+    <!-- <script type="text/javascript" src="loadOverlay.js"></script> -->
     <!-- <script type="text/javascript" src="loadMarkers.js"></script>
     <script type="text/javascript" src="markerwithlabel.js"></script>
     <script type="text/javascript" src="markermanager.js"></script> -->
