--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-  <iframe width="500" height="300" scrolling="no" frameborder="no" src="https://www.google.com/fusiontables/embedviz?q=select+col2+from+12r8gKqTrEd-X6hHILbtTVstsILjAKN9u3WbPdzgt&amp;viz=MAP&amp;h=false&amp;lat=44.50515532474894&amp;lng=16.46237950000011&amp;t=1&amp;z=7&amp;l=col2&amp;y=2&amp;tmplt=2&amp;hml=KML"></iframe>
+  <iframe width="500" height="100%" scrolling="no" frameborder="no" src="https://www.google.com/fusiontables/embedviz?q=select+col2+from+12r8gKqTrEd-X6hHILbtTVstsILjAKN9u3WbPdzgt&amp;viz=MAP&amp;h=false&amp;lat=44.50515532474894&amp;lng=16.46237950000011&amp;t=1&amp;z=7&amp;l=col2&amp;y=2&amp;tmplt=2&amp;hml=KML"></iframe>
 
 </body>
 
