--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script  type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-nfwJ8oKrsSmNurbM7nbyjPZylPQAMw"></script>
-    <!-- <script type="text/javascript" src="loadOverlay.js"></script> -->
+    <script type="text/javascript" src="loadOverlay.js"></script>
     <!-- <script type="text/javascript" src="loadMarkers.js"></script>
     <script type="text/javascript" src="markerwithlabel.js"></script>
     <script type="text/javascript" src="markermanager.js"></script> -->
@@ -32,7 +32,10 @@
 </head>
 
 <body>
-  <iframe width="700" height="100%" scrolling="no" frameborder="no" src="https://www.google.com/fusiontables/embedviz?q=select+col2+from+12r8gKqTrEd-X6hHILbtTVstsILjAKN9u3WbPdzgt&amp;viz=MAP&amp;h=false&amp;lat=44.50515532474894&amp;lng=16.46237950000011&amp;t=1&amp;z=7&amp;l=col2&amp;y=2&amp;tmplt=2&amp;hml=KML"></iframe>
+    <!-- <canvas id="myCanvas" width="100" height="100" hidden></canvas> -->
+    <!-- maps div -->
+
+    <div id="map" style="border: 2px solid #3872ac;"></div>
 
 </body>
 
