--- a/index_old.html
+++ b/index_old.html
@@ -3,30 +3,17 @@
 
 <head>
     <style type="text/css">
-    *{
-  margin: 0;
-  padding: 0;
-}
-
-html{
-  font-size: 62.5%;        /* so, 10px = 1rem */
-}
-
-body{
-  font-family: arial;
-}
-
-#map-canvas{
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 100%;
-}
+        html,
+        body,
+        #map {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script  type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&libraries=geometry"></script>
-    <script type="text/javascript" src="showNearby.js"></script>
+    <script  type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-nfwJ8oKrsSmNurbM7nbyjPZylPQAMw"></script>
+    <script type="text/javascript" src="loadOverlay.js"></script>
     <!-- <script type="text/javascript" src="loadMarkers.js"></script>
     <script type="text/javascript" src="markerwithlabel.js"></script>
     <script type="text/javascript" src="markermanager.js"></script> -->
@@ -45,12 +32,10 @@ body{
 </head>
 
 <body>
-  <form id="zipcodeSearch">
-      <input type="text" id="zipcode" placeholder="Enter zipcode here"/>
-      <input type="submit" value="Search" />
-  </form>
+    <!-- <canvas id="myCanvas" width="100" height="100" hidden></canvas> -->
+    <!-- maps div -->
 
-  <div id="map-canvas"></div>
+    <div id="map" style="border: 2px solid #3872ac;"></div>
 
 </body>
 
