--- a/index.html
+++ b/index.html
@@ -2,31 +2,11 @@
 <html>
 
 <head>
-    <style type="text/css">
-    *{
-  margin: 0;
-  padding: 0;
-}
 
-html{
-  font-size: 62.5%;        /* so, 10px = 1rem */
-}
-
-body{
-  font-family: arial;
-}
-
-#map-canvas{
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 100%;
-}
-    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script  type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&libraries=geometry"></script>
     <script type="text/javascript" src="showNearby.js"></script>
+     <link rel="stylesheet" type="text/css" href="nearby.css"> 
     <!-- <script type="text/javascript" src="loadMarkers.js"></script>
     <script type="text/javascript" src="markerwithlabel.js"></script>
     <script type="text/javascript" src="markermanager.js"></script> -->
