--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script  type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&libraries=geometry"></script>
+    <!-- <script  type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&libraries=geometry"></script> -->
+    <script  type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-nfwJ8oKrsSmNurbM7nbyjPZylPQAMw"></script>
     <script type="text/javascript" src="showNearby.js"></script>
-     <link rel="stylesheet" type="text/css" href="nearby.css"> 
+     <link rel="stylesheet" type="text/css" href="nearby.css">
     <!-- <script type="text/javascript" src="loadMarkers.js"></script>
     <script type="text/javascript" src="markerwithlabel.js"></script>
     <script type="text/javascript" src="markermanager.js"></script> -->
