--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 </head>
 
 <body>
-  <form id="zipcodeSearch">
+  <!-- <form id="zipcodeSearch">
       <input type="text" id="zipcode" placeholder="Enter zipcode here"/>
       <input type="submit" value="Search" />
-  </form>
+  </form> -->
 
   <div id="map-canvas"></div>
 
