--- a/index_nearby.html
+++ b/index_nearby.html
@@ -2,18 +2,13 @@
 <html>
 
 <head>
-    <style type="text/css">
-        html,
-        body,
-        #map {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script  type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-nfwJ8oKrsSmNurbM7nbyjPZylPQAMw"></script>
-    <script type="text/javascript" src="loadOverlay.js"></script>
+    <script  type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&libraries=geometry"></script>
+    <!-- <script  type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-nfwJ8oKrsSmNurbM7nbyjPZylPQAMw"></script> -->
+    <script type="text/javascript" src="location-finder.js"></script>
+    <script type="text/javascript" src="showNearby.js"></script>
+     <link rel="stylesheet" type="text/css" href="nearby.css">
     <!-- <script type="text/javascript" src="loadMarkers.js"></script>
     <script type="text/javascript" src="markerwithlabel.js"></script>
     <script type="text/javascript" src="markermanager.js"></script> -->
@@ -32,10 +27,12 @@
 </head>
 
 <body>
-    <!-- <canvas id="myCanvas" width="100" height="100" hidden></canvas> -->
-    <!-- maps div -->
+  <!-- <form id="zipcodeSearch">
+      <input type="text" id="zipcode" placeholder="Enter zipcode here"/>
+      <input type="submit" value="Search" />
+  </form> -->
 
-    <div id="map" style="border: 2px solid #3872ac;"></div>
+  <div id="map-canvas"></div>
 
 </body>
 
